exports[`Server default snapshot 1`] = `
<Component
  running={true}
  serverDetails={
    Object {
      "id": "some id",
      "name": "some id",
      "port": 3000,
      "queue": "some queue id",
      "type": "some type",
    }
  } />
`;

exports[`ServerInspect default snapshot 1`] = `
<div
  className="inspect-server">
  <div
    className="view-header">
    <Connect(Component) />
    some id
  </div>
  <div
    className="inspect-server-spec-bar">
    <div
      className="inspect-server-spec-bar__cell">
      Port:
      <span
        className="inspect-server-spec-bar__value">
        3000
      </span>
    </div>
    <div
      className="inspect-server-spec-bar__cell">
      Type:
      <span
        className="inspect-server-spec-bar__value">
        some type
      </span>
    </div>
  </div>
  <main
    className="inspect-server-main inspect-server__main">
    <div
      className="inspect-server-details">
      <div
        className="inspect-server-details__row">
        <div
          className="inspect-server-details__cell">
          <Link
            className="inspect-server__add-task-button button"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/add-task">
            <i
              className="fa fa-plus" />
             Add task
          </Link>
        </div>
        <div
          className="inspect-server-details__cell">
          <Connect(FilePicker)
            serverId="some id" />
        </div>
      </div>
    </div>
    <div
      className="inspect-server-queue">
      <Component
        id="some id" />
    </div>
  </main>
</div>
`;

exports[`ServerPlaceholder any servers exists snapshot 1`] = `
<div
  className="server-placeholder">
  Add server
</div>
`;

exports[`ServerPlaceholder some servers exist snapshot 1`] = `
<div
  className="server-placeholder">
  Select server
</div>
`;
